@@ -21,6 +21,8 @@ CMF 2.2.0-beta (unreleased)
 
   Others
 
+    - CMFDefault: Adjusted factory.py to new GenericSetup version.
+
     - CMFUid: Removed redundant and unexpected code to auto-create catalog
       index and column for the UID handler tool. The index and column are
       already created by the default CMFUid GenericSetup profile.
